--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <title>SQLite Wasm Demo</title>
-  <script type="module" src="/script.js"></script>
   <script type="module" src="/main.js"></script>
 </head>
 <body>
 <h1>SQLite Wasm Demo</h1>
-<h2>Main thread</h2>
-<div class="main-thread"></div>
 <h2>Worker</h2>
 <div class="worker"></div>
+
+<button>Button</button>
 </body>
 </html>
